# tts-mcp

./: .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.yaml  justfile  pyproject.toml  pyrightconfig.json
config/codespell/: ignore.txt
config/semgrep/: no-conditional-assignment-fallback.yml  no-default-values.yml  no-filterwarnings.yml  no-mypy-ignore-missing-imports.yml  no-noqa.yml  no-nosec.yml  no-shellcheck-disable.yml  no-skip-tests.yml  no-sneaky-fallbacks.yml  no_type_suppression.yml  python-constants.yml
mcp/: package-lock.json  package.json  tsconfig.json  tts-mcp.ts
scripts/: download-model.sh  test-concurrent-say.py
src/: __init__.py  main.py  server.py  tts.py
src/mistral_text_to_spech/: __init__.py
stubs/mlx_audio/tts/: utils.pyi
stubs/pyloudnorm/: __init__.pyi
stubs/scipy/signal/: __init__.pyi
stubs/sounddevice/: __init__.pyi
tests/: test_main.py  test_server.py  test_tts.py
tests/architecture/: __init__.py  conftest.py  test_architecture.py
